src/objects/Batch_Jobs__c.object
<CustomObject>
    <fields>
        <fullName>Account_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Trader</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Batch Jobs</relationshipLabel>
        <relationshipName>Batch_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Batch Jobs (Account2)</relationshipLabel>
        <relationshipName>Batch_Jobs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Batch Jobs (Account3)</relationshipLabel>
        <relationshipName>Batch_Jobs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance_Receeded__c</fullName>
        <description>The amount paid by customer</description>
        <inlineHelpText>The amount paid by customer</inlineHelpText>
        <label>Amount Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Batch_Type__c</fullName>
        <description>The type of Licence that will be processed for this batch. Currently there are three types (SL(Monthy), PE (Weekly), LH(Monthy)</description>
        <inlineHelpText>SL = Stall Licence
PE = Pre Existing
LH = Licence Holder</inlineHelpText>
        <label>Batch Type</label>
        <picklist>
            <picklistValues>
                <fullName>SL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC 1st Qtr Ins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC 2nd Qtr Ins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC 3rd Qtr Ins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC 4th Qtr Ins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CWW Annual Parks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CWW Qtr Drainage Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CWW Water Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metered Water $</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Notes__c</fullName>
        <label>Credit Notes</label>
        <summarizedField>Transaction__c.TotalAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>CreditMemo</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Batch_Jobs__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Before__c</fullName>
        <label>Due Before</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Date__c</fullName>
        <formula>IF ( TEXT(Process_Range__c) = &quot;Month&quot; , DATE(YEAR(Week_Month_Of__c),MONTH(Week_Month_Of__c) ,01),IF (TEXT(Process_Range__c) = &quot;Week&quot;,(Week_Month_Of__c - MOD( Week_Month_Of__c - DATE(1900, 1, 7), 7))+ 1,Week_Month_Of__c) )</formula>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <label>Outstanding Balance</label>
        <summarizedField>Transaction__c.Outstanding_Balance__c</summarizedField>
        <summaryForeignKey>Transaction__c.Batch_Jobs__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <inlineHelpText>The total amount that will be paid on the transactions</inlineHelpText>
        <label>Payment Amount</label>
        <summarizedField>Transaction__c.Signed_Balance__c</summarizedField>
        <summaryForeignKey>Transaction__c.Batch_Jobs__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <inlineHelpText>EFT - Direct Debit
CS - Cash
CQ - Cheque
CC - Credit Card</inlineHelpText>
        <label>Payment Type</label>
        <picklist>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
                <default>true</default>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Range__c</fullName>
        <inlineHelpText>Are you processing for a month or a week</inlineHelpText>
        <label>Process Range</label>
        <picklist>
            <controllingField>Batch_Type__c</controllingField>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <formula>IF ( TEXT(Process_Range__c) = &quot;Month&quot; , IF( 
MONTH( Week_Month_Of__c ) = 12, 
DATE( YEAR( Week_Month_Of__c ), 12, 31 ), 
DATE( YEAR( Week_Month_Of__c ), MONTH ( Week_Month_Of__c ) + 1, 1 ) - 1 
), IF(TEXT(Process_Range__c) = &quot;Week&quot;,(Week_Month_Of__c - MOD( Week_Month_Of__c - DATE(1900, 1, 7), 7))+ 7 ,Week_Month_Of__c) )</formula>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Count__c</fullName>
        <label>Transaction Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Month_Of__c</fullName>
        <defaultValue>Today()</defaultValue>
        <inlineHelpText>Any date that falls in the week or month that will be processes</inlineHelpText>
        <label>Week / Month Of</label>
        <type>Date</type>
    </fields>
    <label>Batch Jobs</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Batch_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Process_Range__c</columns>
        <columns>From_Date__c</columns>
        <columns>To_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000000}</displayFormat>
        <label>Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Jobs</pluralLabel>
    <recordTypes>
        <fullName>Error_Processing_Invoices</fullName>
        <active>true</active>
        <description>If errors occur during the processing of the invoices then give ability to run  processing on orders that failed (ie orders with no qboId)</description>
        <label>Error Processing Invoices</label>
    </recordTypes>
    <recordTypes>
        <fullName>Error_Processing_Leave_Credit_Notes</fullName>
        <active>true</active>
        <label>Error Processing Leave Credit Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finding_Transactions</fullName>
        <active>true</active>
        <label>Finding Transactions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Invoices_Generated</fullName>
        <active>true</active>
        <label>Invoices Generated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Leave_Credit_Notes_Generated</fullName>
        <active>true</active>
        <label>Leave Credit Notes Generated</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>false</active>
        <description>A batch that has not been submitted</description>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Leave_Credit_Notes</fullName>
        <active>true</active>
        <label>New Leave Credit Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_OrdersInvoices</fullName>
        <active>true</active>
        <description>A batch that has not been submitted for  Orders/Invoices</description>
        <label>New Orders/Invoices</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Payments</fullName>
        <active>true</active>
        <label>New Payments</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Payments_From_Accounts</fullName>
        <active>true</active>
        <label>New Payments From Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>No_Transactions_To_Pay</fullName>
        <active>true</active>
        <description>No Invoices /Cn Transactions To Pay</description>
        <label>No Transactions To Pay</label>
    </recordTypes>
    <recordTypes>
        <fullName>Orders_Generated</fullName>
        <active>true</active>
        <label>Orders Generated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payments_Generated</fullName>
        <active>true</active>
        <label>Payments Generated</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processing_Invoices</fullName>
        <active>true</active>
        <label>Processing Invoices</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processing_Leave_Credit_Notes</fullName>
        <active>true</active>
        <label>Processing Leave Credit Notes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processing_Orders</fullName>
        <active>true</active>
        <label>Processing Orders</label>
    </recordTypes>
    <recordTypes>
        <fullName>Processing_Payment</fullName>
        <active>true</active>
        <label>Processing Payment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transactions_Found</fullName>
        <active>true</active>
        <label>Transactions Found</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Negative_Paying</fullName>
        <active>false</active>
        <description>Prevents the customer paying a negative value.</description>
        <errorConditionFormula>IF( Balance_Receeded__c &lt;  0 , true, false)</errorConditionFormula>
        <errorDisplayField>Balance_Receeded__c</errorDisplayField>
        <errorMessage>Cannot pay a negative value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Overpaying</fullName>
        <active>true</active>
        <description>Prevents the customer paying more than the owed amount.</description>
        <errorConditionFormula>IF( Balance_Receeded__c &gt; Outstanding_Balance__c , true, false)</errorConditionFormula>
        <errorDisplayField>Balance_Receeded__c</errorDisplayField>
        <errorMessage>Cannot pay more than the amount owed.</errorMessage>
    </validationRules>
</CustomObject>